...
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProjectsTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Select Project" id="RgQ-GZ-psG">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Mwy-E9-xgW">
                            <connections>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="All Branches" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5iD-RU-7AQ">
                                            <rect key="frame" x="20" y="0.0" width="374" height="60"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="BranchesTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="7QS-oZ-PhE">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="iFw-Sh-YF5">
                            <connections>
...
        <scene sceneID="FkY-Ef-iCc">
            <objects>
                <tableViewController title="Builds" id="3M0-Ym-eTF" customClass="BuildsViewController" customModule="CI2Go" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="22" sectionFooterHeight="22" id="wXw-4G-DR6">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="BuildsTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                                    </subviews>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="BuildConfigurationCell">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                    </subviews>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="BuildArtifactsCell">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="BuildActionsTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
